compiler/tools/fpp-check/test/component_instance_def/queued_no_queue_size.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/component_instance_def/queued_no_queue_size.fpp:9.1
instance c: C base id 0x100
^
error: invalid component instance definition c: queued component must have queue size
